--- a/src/components/Popup.less
+++ b/src/components/Popup.less
@@ -10,6 +10,7 @@
   z-index: 9999;
   overflow: auto;
   line-height: 100vh;
+  text-align: center;
 
   *,
   *::before,
